--- a/src/App.css
+++ b/src/App.css
@@ -104,11 +104,11 @@ body {
   justify-content: space-between;
 }
 
-.main__nav {
+/* .main__nav {
   width: 244px;
   background-color: #181818;
   padding: 20px 0 20px 36px;
-}
+} */
 
 .main__centerblock {
   width: auto;
@@ -123,15 +123,15 @@ body {
   padding: 20px 90px 20px 78px;
 }
 
-.nav__logo {
+/* .nav__logo {
   width: 113.33px;
   height: 43px;
   padding: 13px 0 13px 0;
   background-color: transparent;
   margin-bottom: 20px;
-}
+} */
 
-.nav__burger {
+/* .nav__burger {
   width: 20px;
   height: 36px;
   padding: 13px 0;
@@ -145,27 +145,27 @@ body {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-}
+} */
 
-.nav__menu {
+/* .nav__menu {
   display: block;
   visibility: visible;
-}
+} */
 
-.logo__image {
+/* .logo__image {
   width: 113.33px;
   height: 17px;
   color: #181818;
-}
+} */
 
-.burger__line {
+/* .burger__line {
   display: inline-block;
   width: 100%;
   height: 1px;
   background-color: #d3d3d3;
-}
+} */
 
-.menu__list {
+/* .menu__list {
   padding: 18px 0 10px 0;
 }
 
@@ -179,9 +179,9 @@ body {
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-}
+} */
 
-.centerblock__search {
+/* .centerblock__search {
   width: 100%;
   border-bottom: 1px solid #4e4e4e;
   margin-bottom: 51px;
@@ -195,7 +195,7 @@ body {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-}
+} */
 
 .centerblock__h2 {
   font-style: normal;
@@ -230,7 +230,7 @@ body {
   flex-direction: column;
 }
 
-.search__svg {
+/* .search__svg {
   width: 17px;
   height: 17px;
   margin-right: 5px;
@@ -286,7 +286,7 @@ body {
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-}
+} */
 
 .filter__title {
   font-style: normal;
@@ -372,7 +372,7 @@ body {
   text-align: end;
 }
 
-.playlist__item {
+/* .playlist__item {
   width: 100%;
   display: block;
   margin-bottom: 12px;
@@ -392,9 +392,9 @@ body {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-}
+} */
 
-.track__title {
+/* .track__title {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -494,7 +494,7 @@ body {
   line-height: 24px;
   text-align: right;
   color: #696969;
-}
+} */
 
 /* .sidebar__personal {
   display: -webkit-box;
@@ -642,7 +642,7 @@ body {
   padding: 0 92px 0 0;
 }
 
-.player__controls {
+/* .player__controls {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -723,7 +723,7 @@ body {
   height: 12px;
   fill: transparent;
   stroke: #696969;
-}
+} */
 
 .player__track-play {
   display: -webkit-box;
@@ -842,7 +842,7 @@ body {
   stroke: #696969;
 }
 
-.volume__content {
+/* .volume__content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -876,4 +876,4 @@ body {
 
 .volume__progress-line {
   width: 109px;
-}
+} */
