--- a/src/App.css
+++ b/src/App.css
@@ -735,7 +735,7 @@ body {
   flex-direction: row;
 }
 
-.track-play__contain {
+/* .track-play__contain {
   width: auto;
   display: -ms-grid;
   display: grid;
@@ -745,7 +745,7 @@ body {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-}
+} */
 
 /* .track-play__image {
   width: 51px;
