добавление стейтов на кнопки плеера

--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,8 @@ body {
 
 .container {
   max-width: 1920px;
-  height: 100vh;
+  max-height: 1000px;
+  /* height: 100vh; */
   margin: 0 auto;
   position: relative;
   background-color: #181818;
@@ -328,6 +329,7 @@ body {
 }
 
 .content__playlist {
+  /* height: 100vh; */
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
