реализация прогресс бара

--- a/src/App.css
+++ b/src/App.css
@@ -332,7 +332,7 @@ body {
 }
 
 .content__playlist {
-  /* height: 100vh; */
+  height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
